# corneds

./: .gitignore  .gitmodules  README.md  corneds.kicad_pcb
corneds/: corneds.kicad_pcb  corneds.kicad_prl  corneds.kicad_pro  corneds.kicad_sch  fp-info-cache
firmware/: CMakeLists.txt
firmware/inc/: alarm_utils.h  debug_uart.h  hid_task.h  keymap.h  led_sm.h  led_utils.h  pinmap.h  results.h  timeslice.h  timing_arch.h  usb_detect.h  watchdog.h  xboard_comms.h
firmware/scripts/: build.sh  clean.sh  connect_ocd.sh  debug.sh  flash.sh
firmware/src/: alarm_utils.c  debug_uart.c  hid_task.c  keymap.c  led_sm.c  led_utils.c  main.c  timeslice.c  timing_arch.c  usb_descriptors.c  usb_detect.c  watchdog.c  xboard_comms.c
firmware/test/: keypress.c  led_blinky.c  print.c  test_debug_uart.c  test_keypress.c  test_print.c  test_xboard_comms.c  watchdog.c  xboard_comms.c
hardware/: corneds_wooden_base_left.step  corneds_wooden_base_right.step
pcb/: corneds.kicad_pcb  corneds.kicad_prl  corneds.kicad_pro  corneds.kicad_sch  fp-info-cache
udev/: 99-picoprobe.rules
